--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta property="og:image" content="/messages-preview.jpg" />
     <script type="text/javascript" src="//static.cdn.prismic.io/prismic.min.js"></script>
     <title>This Design</title>
   </head>
