--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,14 @@
 
     <script>
       window.prismic = {
-        endpoint: 'https://thisstaging.prismic.io/api/v2',
+        endpoint: 'https://thisstaging.cdn.prismic.io/api/v2',
       }
     </script>
-    <script async defer src="//prismic.io/prismic.js?repo=thisstaging"></script>
+    <script
+      type="text/javascript"
+      src="https://static.cdn.prismic.io/prismic.min.js"
+    ></script>
+
     <title>This Design</title>
   </head>
   <body>
